# MikuMikuBulletPhysics

./: .gitattributes  .gitmodules  LICENSE  README.md  __init__.py  blender_manifest.toml
mmp/bridge/: ui.py
mmp/core/: coord.py  dll.py  loop.py  state.py
mmp/ops/: load.py  start.py
src/: CMakeLists.txt
src/core/anim/: evaluator.cpp  evaluator.h
src/core/bridge/adapter/: BlenderAdapter.cpp  BlenderAdapter.h
src/core/bridge/capi/: CAPI.cpp  CAPI.h
src/core/bridge/engine/: Engine.cpp  Engine.h  PhysicsPipeline.cpp  PhysicsPipeline.h
src/core/ik/: solver.cpp  solver.h
src/core/math/: converter.cpp  converter.h
src/core/model/: model.cpp  model.h  types.h
src/core/node/: transform.cpp  transform.h
src/core/physics/: world.cpp  world.h
src/core/pmx/: parser.cpp  parser.h  types.h
src/core/util/: encoding.cpp  encoding.h
src/core/vmd/: parser.cpp  parser.h  types.h
temp/tests/pmx_test/: test.pmx
